<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.caseb.case_beauty_.LoginActivity"
    android:focusableInTouchMode="true">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="386dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:background="@drawable/logologin"></FrameLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/screen_border"
                android:backgroundTint="#66e72bac"
                android:text="@string/action_sign_in"
                android:textColor="#ffffff" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTintMode="add"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="1">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!--
        <Button
            android:id="@+id/buttonLista"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonNovo"
            android:layout_centerHorizontal="true"
            android:onClick="abreLista"
            android:text="Lista" />-->

    <TextView
            android:id="@+id/button_esquece_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/butto_esquece_senha"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#66e72bac"
            android:textSize="18dp"
            android:textStyle="bold"
        android:onClick="abreRecuperarSenha" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="___________"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4d3a82" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" Ainda não tem cadastro? "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4d3a82" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="___________"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#4d3a82" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </RelativeLayout>

        <Button
            android:id="@+id/button_registrar"
            style="?android:textAppearanceSmall"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/screen_border"
            android:backgroundTint="#66e72bac"
            android:text="@string/button_registrar"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:onClick="abreRegistrar"/>


    </LinearLayout>
