<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_atender_swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fdfdfe"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.caseb.case_beauty_Fargments.AtenderSolicitacao"
        tools:showIn="@layout/activity_atender_solicitacao">


        <Button
            android:id="@+id/btnEfetuarAtendimento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/screen_border"
            android:backgroundTint="#66e72bac"
            android:drawableLeft="@drawable/ic_efetuar_atendimento"
            android:drawableTint="#ffffff"
            android:paddingLeft="70dp"
            android:text="@string/btnEfetuarAtendimento"
            android:textColor="#ffffff" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btnRecusarAtendimento"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/linearLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:background="@drawable/screen_border"
                android:backgroundTint="#66e72bac"
                android:drawableLeft="@drawable/ic_recusar_atendimento"
                android:drawableTint="#ffffff"
                android:paddingLeft="10dp"
                android:text="@string/btnRecusarAtendimento"
                android:textColor="#ffffff"
                android:onClick="recusaAtendimento" />

            <Button
                android:id="@+id/btnVerDetalhes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/screen_border"
                android:backgroundTint="#66e72bac"
                android:drawableLeft="@drawable/ic_ver_detalhes"
                android:drawableTint="#ffffff"
                android:paddingLeft="40dp"
                android:text="@string/btnVerDetalhes"
                android:textColor="#ffffff"
                android:onClick="verDetalhes" />
        </LinearLayout>

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/listViewSolicitacao"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/btnEfetuarAtendimento"
            android:background="#ffff"
            android:scrollingCache="true"
            android:smoothScrollbar="true"
            android:stackFromBottom="false"
            android:scrollIndicators="top"
            android:layout_below="@+id/textView77" />


        <TextView
            android:id="@+id/textViewAtenderSol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="Atender Solicitação"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="22dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="right"
            android:text="_________________________________"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4d3a82"
            android:textAlignment="center"
            android:background="#000000"
            android:layout_below="@+id/listViewSolicitacao"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:gravity="right"
            android:text="_________________________________"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#4d3a82"
            android:textAlignment="center"
            android:background="#000000"
            android:layout_below="@+id/textViewAtenderSol"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Aqui as solicitações de serviço disponíveis para você"
            android:id="@+id/textView77"
            android:layout_below="@+id/textViewAtenderSol"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp" />


    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>